test: 메시지 조회 시 잘못된 사용자에 대한 예외 테스트 추가